; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_dlci.c_dlci_header.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_dlci.c_dlci_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.net_device = type { i32 }
%struct.frhdr = type { i32, i32, i32, i32, i32, i32 }
%struct.dlci_local = type { i32 }

@FRAD_I_UI = common dso_local global i32 0, align 4
@FRAD_P_IP = common dso_local global i32 0, align 4
@FRAD_P_PADDING = common dso_local global i32 0, align 4
@FRAD_P_SNAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.net_device*, i16, i8*, i8*, i32)* @dlci_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dlci_header(%struct.sk_buff* %0, %struct.net_device* %1, i16 zeroext %2, i8* %3, i8* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.sk_buff*, align 8
  %9 = alloca %struct.net_device*, align 8
  %10 = alloca i16, align 2
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.frhdr, align 4
  %15 = alloca %struct.dlci_local*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %8, align 8
  store %struct.net_device* %1, %struct.net_device** %9, align 8
  store i16 %2, i16* %10, align 2
  store i8* %3, i8** %11, align 8
  store i8* %4, i8** %12, align 8
  store i32 %5, i32* %13, align 4
  %18 = load %struct.net_device*, %struct.net_device** %9, align 8
  %19 = call %struct.dlci_local* @netdev_priv(%struct.net_device* %18)
  store %struct.dlci_local* %19, %struct.dlci_local** %15, align 8
  %20 = load i32, i32* @FRAD_I_UI, align 4
  %21 = getelementptr inbounds %struct.frhdr, %struct.frhdr* %14, i32 0, i32 5
  store i32 %20, i32* %21, align 4
  %22 = load i16, i16* %10, align 2
  %23 = zext i16 %22 to i32
  switch i32 %23, label %27 [
    i32 128, label %24
  ]

24:                                               ; preds = %6
  %25 = load i32, i32* @FRAD_P_IP, align 4
  %26 = getelementptr inbounds %struct.frhdr, %struct.frhdr* %14, i32 0, i32 4
  store i32 %25, i32* %26, align 4
  store i32 8, i32* %16, align 4
  br label %38

27:                                               ; preds = %6
  %28 = load i32, i32* @FRAD_P_PADDING, align 4
  %29 = getelementptr inbounds %struct.frhdr, %struct.frhdr* %14, i32 0, i32 3
  store i32 %28, i32* %29, align 4
  %30 = load i32, i32* @FRAD_P_SNAP, align 4
  %31 = getelementptr inbounds %struct.frhdr, %struct.frhdr* %14, i32 0, i32 2
  store i32 %30, i32* %31, align 4
  %32 = getelementptr inbounds %struct.frhdr, %struct.frhdr* %14, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @memset(i32 %33, i32 0, i32 4)
  %35 = load i16, i16* %10, align 2
  %36 = call i32 @htons(i16 zeroext %35)
  %37 = getelementptr inbounds %struct.frhdr, %struct.frhdr* %14, i32 0, i32 0
  store i32 %36, i32* %37, align 4
  store i32 24, i32* %16, align 4
  br label %38

38:                                               ; preds = %27, %24
  %39 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %40 = load i32, i32* %16, align 4
  %41 = call i8* @skb_push(%struct.sk_buff* %39, i32 %40)
  store i8* %41, i8** %17, align 8
  %42 = load i8*, i8** %17, align 8
  %43 = icmp ne i8* %42, null
  br i1 %43, label %45, label %44

44:                                               ; preds = %38
  store i32 0, i32* %7, align 4
  br label %50

45:                                               ; preds = %38
  %46 = load i8*, i8** %17, align 8
  %47 = load i32, i32* %16, align 4
  %48 = call i32 @memcpy(i8* %46, %struct.frhdr* %14, i32 %47)
  %49 = load i32, i32* %16, align 4
  store i32 %49, i32* %7, align 4
  br label %50

50:                                               ; preds = %45, %44
  %51 = load i32, i32* %7, align 4
  ret i32 %51
}

declare dso_local %struct.dlci_local* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @htons(i16 zeroext) #1

declare dso_local i8* @skb_push(%struct.sk_buff*, i32) #1

declare dso_local i32 @memcpy(i8*, %struct.frhdr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
